Fix #94 Sidebar missing column gap in editor

--- a/src/blocks/sidebar/editor.css
+++ b/src/blocks/sidebar/editor.css
@@ -1,4 +1,3 @@
-/* stylelint-disable selector-class-pattern */
 .wp-block-hrswp-sidebar .wp-block {
 	max-width: none;
 	margin-left: 0;
@@ -14,6 +13,10 @@
 }
 
 @media (min-width: 600px) {
+
+	.wp-block-hrswp-sidebar {
+		gap: 2rem;
+	}
 
 	.wp-block-hrswp-sidebar.wp-block-columns > .block-editor-inner-blocks > .block-editor-block-list__layout {
 		display: flex;
@@ -36,4 +39,3 @@
 	}
 
 }
-/* stylelint-enable selector-class-pattern */
